feat: add producer metrics
- Introduces comprehensive producer metrics
- Created ProducerErrorMapper to standardize error type mapping for exceptions and topic states
- Added ProducerErrorType enum to categorize and track different error scenarios
- Implemented ProducerMetricsConfig to configure metrics collection and reporting